セリーグの応援歌を追加

--- a/pdfmr/static/templates2/carp.html
+++ b/pdfmr/static/templates2/carp.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>広島東洋カープ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,179 +50,112 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="car">広島東洋カープ　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
-	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
-</tr>
-<tr>
 	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
+	<th class="p_name">鈴木誠也</th>
+	<td>誠の道進み チームに流れを呼べ 荒川から架けろ 夢の赤い橋</td>
 </tr>
 <tr>
 	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
-	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
+	<th class="p_name">田中広輔</th>
 	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
+		赤く燃え上がる 夢見たこの世界で 研ぎ澄ませそのセンス 打てよ広輔<br>
 	</td>
 </tr>
 <tr>
 	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
-	</td>
+	<th class="p_name">小窪哲也</th>
+	<td>(前奏)♪~こ!♪~く!♪~ぼ!♪~こ!く!ぼ!<br>
+		鋭く引っ張って 華麗に流し打ち 基本はセンター返し それが小窪哲也</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">長野久義</th>
+	<td>
+		歓声を背に受け　頂(いただき)を見つめて　紅(くれない)　一筋に　突き進め長野 　
+	</td>
 </tr>
 <tr>
-	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_num">6</th>
+	<th class="p_name">安部友裕</th>
+	<td>新しい時代に 今手を伸ばせ 終わらぬ夢の先に 導いてくれ<br>
+	</td>
 </tr>
 <tr>
-	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_num">7</th>
+	<th class="p_name">堂林翔太</th>
+	<td>光輝く その道を 翔(か)けぬけて 魅せろ 堂林 SHOW TIME!</td>
 </tr>
 <tr>
-	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
-</tr>
-<tr>
-	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
-</tr>
-<tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
+	<th class="p_num">27</th>
+	<th class="p_name">會澤翼</th>
+	<td>いざ大空へ翔ばたけ 熱い想い乗せ 勝利へ導く一打 決めろよ翼</td>
 </tr>
 <tr>
 	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
+	<th class="p_name">石原慶幸</th>
+	<td>南の夜空に赤く輝く いちばん星 広島に優勝(ゆめ)を運ぶ 石原慶幸</td>
 </tr>
 <tr>
 	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
+	<th class="p_name">菊池涼介</th>
+	<td>(ファンファーレ)始まりの鐘が鳴る~ 菊池! 広島伝説~<br>
+		光を追い越して メーター振りきり駆け抜けろ 止まらないぜ 韋駄天菊池</td>
 </tr>
 <tr>
-	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
+	<th class="p_num">37</th>
+	<th class="p_name">野間峻祥</th>
+	<td>鋭い打球飛ばせ 自慢の俊足見せろ 赤い流星のように 走れタカヨシ</td>
 </tr>
 <tr>
-	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
-</tr>
-<tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
-</tr>
-<tr>
-	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_num">40</th>
+	<th class="p_name">磯村嘉孝</th>
+	<td>(前奏)当たると痛えぞ　磯村パンチ<br>
+		解き放てよ　この瞬間　エンジン全開　さあスパーク
+		いざ満タン　フルパワーで　撃て　磯村パンチ 　</td>
 </tr>
 <tr>
 	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_name">小園海斗</th>
+	<td>新たな息吹を　注ぎ込め
+		世代のトップを走れ　ぶっちぎれ</td>
 </tr>
 <tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_num">55</th>
+	<th class="p_name">松山竜平</th>
+	<td>闘志を燃やし 鋭く振りぬけ さぁかっとばせ さぁ打ちまくれ 我等の松山</td>
 </tr>
 <tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num">63</th>
+	<th class="p_name">西川龍馬</th>
+	<td>気高きその勇姿 比(なら)ぶ者は無いさ 我等に希望の光 見せてくれ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_name">助っ人外国人テーマ</th>
+	<td>海を渡ってやって来た みんなの夢を 大きくつかもうぜ 遥かなる空に</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_name">跳ねろ若鯉</th>
+	<td>頂上突撃 ○○! 命燃やせ ○○! 強く高く 跳ねろ若鯉</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
+	<th class="p_name">汎用テーマ</th>
+	<td>♪~ ○○! ♪~ ○○! さぁ勝利への道 切り拓(ひら)け</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
+	<th class="p_name">投手テーマ</th>
+	<td>振らな 何も 始まらないから 強気でいちかばちか フルスイング</td>
 </tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
-</tr>
+
 </table>
 
 </section>
