--- a/pdfmr/static/templates2/giants.html
+++ b/pdfmr/static/templates2/giants.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>読売ジャイアンツ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,179 +50,181 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="gia">読売ジャイアンツ　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
-	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
-</tr>
-<tr>
-	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
-</tr>
-<tr>
 	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
-	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
-	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
-	</td>
-</tr>
-<tr>
-	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
-	</td>
+	<th class="p_name">陽岱鋼</th>
+	<td>遠く強く飛ばせ 振り抜け 走り出せ 飛び込め つかみ取れ 魅せる男 陽岱鋼</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">中島宏之</th>
+	<td>
+		吠えろ中島 不屈の戦士 狙い定め 叩け 振り抜け さあ勝利の雄叫びだ<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">6</th>
+	<th class="p_name">坂本勇人</th>
+	<td>【前奏：オオオ… オー燃えろ】<br>
+		誰よりも強く勇ましく オオオ… お前が立つその場所は熱気の渦が巻く 坂本 炎となれ</td>
 </tr>
 <tr>
 	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_name">丸佳浩</th>
+	<td>誰より強く さらなる高みへ この大歓声が 君の味方だ さあ我らと行こう 丸佳浩</td>
 </tr>
 <tr>
 	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">亀井善行</th>
+	<td>
+		どこまでも駆け抜けろ 地平の彼方目指し 亀井ガムシャラに 追い続けろ
+	</td>
 </tr>
 <tr>
-	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<th class="p_num">15</th>
+	<th class="p_name">澤村拓一</th>
+	<td>鉄の右腕がうなり上げ 打者をなぎ倒す その名世代に轟かす 王者澤村投げ抜け<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">17</th>
+	<th class="p_name">大竹寛</th>
+	<td>寛大な立ち姿 気迫に満ちた心 勝ち星握る その手で夢つかめ</td>
+</tr>
+<tr>
+	<th class="p_num">18</th>
+	<th class="p_name">菅野智之</th>
+	<td>揺るがぬ想い その腕に 魂込めたストレート 勝利へ続く道 進め 菅野智之</td>
+</tr>
+<tr>
+	<th class="p_num">21</th>
+	<th class="p_name">岩隈久志</th>
+	<td>大きな志 胸に抱き 決めろ意のままに ⾒せつけろ岩隈</td>
+</tr>
+<tr>
+	<th class="p_num">22</th>
+	<th class="p_name">小林誠司</th>
+	<td>今魅せろ強肩を 扇の要 夢バットに託し 戦え小林</td>
 </tr>
 <tr>
 	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_name">野上亮磨</th>
+	<td>勝利を掴め 技を磨き上げ 巨人の誇り 胸に立ち向かえ</td>
+</tr>
+<tr>
+	<th class="p_num">24</th>
+	<th class="p_name">大城卓三</th>
+	<td>鋭いまなざし 満ちあふれる男気 魅せろパワー フルスイング ぶち込め大城</td>
+</tr>
+<tr>
+	<th class="p_num">25</th>
+	<th class="p_name">岡本和真</th>
+	<td>【前奏：歴史を築け 岡本和真】<br>
+		夢あふれるフィールド その名刻め岡本 スタンド湧かす 永遠のアーチ</td>
+</tr>
+<tr>
+	<th class="p_num">26</th>
+	<th class="p_name">高橋優貴</th>
+	<td>届け我らのエール 信じて一球入魂 駆け上がれこのスターダム 髙橋優貴 勝ち抜け</td>
+</tr>
+<tr>
+	<th class="p_num">27</th>
+	<th class="p_name">炭谷銀仁朗
+	</th>
+	<td>強背中で語る 漢の生き様 恐れずに突き進み 輝け銀仁朗</td>
+</tr>
+<tr>
+	<th class="p_num">28</th>
+	<th class="p_name">田口麗斗</th>
+	<td>夢に見た舞台 今日も守り抜け いつでもスマイル魅せて 麗しく</td>
 </tr>
 <tr>
 	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
+	<th class="p_name">吉川尚輝</th>
+	<td>好守に巧打 結果を見せつけて 輝く道を 駆け抜けろ尚輝</td>
 </tr>
 <tr>
 	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
+	<th class="p_name">畠世周</th>
+	<td>勝利を重ね 歴史を刻め 掴め今日の星 熱いぜ畠 世に名を馳せて 行こうぜどこまでも
+	</td>
 </tr>
 <tr>
-	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
+	<th class="p_num">35</th>
+	<th class="p_name">桜井俊貴</th>
+	<td>鍛え上げた剛腕 力を込めたストレート 三振を奪い取れ 決めろ桜井</td>
 </tr>
 <tr>
 	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
+	<th class="p_name">石川慎吾</th>
+	<td>豪快スイングで お前が打線の起爆剤 我等の導火線に 火をつけてくれ慎吾</td>
+</tr>
+<tr>
+	<th class="p_num">37</th>
+	<th class="p_name">若林晃弘</th>
+	<td>夢は大きく高らかに 輝け晃弘! まだ見ぬ境地目指して 全力で突っ走れ</td>
 </tr>
 <tr>
 	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
+	<th class="p_name">立岡宗一郎</th>
+	<td>立ち向かえ 羽ばたけ 夢と希望握りしめ バットで脚でGO! GO! GO! かき回せ</td>
 </tr>
 <tr>
 	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
+	<th class="p_name">メルセデス</th>
+	<td>メルセデス メルセデス ギアを上げて C.C.メルセデス　アクセル全開</td>
 </tr>
 <tr>
-	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_num">43</th>
+	<th class="p_name">重信慎之介</th>
+	<td>風をその背に受け 駆け抜けろ重信 突撃進撃 疾風迅雷</td>
+</tr>
+<tr>
+	<th class="p_num">46</th>
+	<th class="p_name">鍬原拓也</th>
+	<td>努力と希望の道 忘れず進め 想い胸に ここから切り拓け</td>
 </tr>
 <tr>
 	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_name">田中俊太</th>
+	<td>ボールに乗せた 僕らの希望 俊太が打ち高く高く 未来描く</td>
 </tr>
 <tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_num">56</th>
+	<th class="p_name">山本泰寛</th>
+	<td>勝負のこの舞台で いざ舞え駆け回れ 仲間と己を信じ 泥臭く華麗に</td>
 </tr>
 <tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num">58</th>
+	<th class="p_name">宮國椋丞</th>
+	<td>夢、球に乗せ まばゆい笑顔 琉球の星ちばりよ キラめけ宮國</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_name">ヒッターズテーマA</A></th>
+	<td>お前の出番 ゆくぞ 敵を打ち砕け 巨人に勝利の旋風 巻き起こせよ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_name">ヒッターズテーマB</th>
+	<td>※海越え 僕らのためにやってきた Let's Fight○○! Let's Charge○○! ホームラン</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
+	<th class="p_name">ピッチャーズテーマ1</th>
+	<td>まぶしく輝け○○ この時に 勝負さ今こそ つかめよ 勝利の星</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
+	<th class="p_name">ピッチャーズテーマ2</th>
+	<td>行け火消しだリリーフよ 消せ火の粉をリリーフよ 牙をむいて立ち向かえよ 男の出番</td>
 </tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
-</tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
-</tr>
+
 </table>
 
 </section>
