--- a/pdfmr/static/templates2/swallows.html
+++ b/pdfmr/static/templates2/swallows.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>東京ヤクルトスワローズ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,179 +50,152 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="swa">東京ヤクルトスワローズ　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
+	<th class="p_num">00</th>
+	<th class="p_name">奥村展征</th>
+	<td>見せろ勝利へと誘う　熱いプレー　放て気持ち込めて　恵まれしセンスで</td>
+</tr>
+<tr>
 	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
+	<th class="p_name">藤井亮太</th>
+	<td>
+		数々の試練を　忍ぶる心が　輝きへと我ら導く　礎となれ<br>
+	</td>
 </tr>
 <tr>
 	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
-	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
-	</td>
+	<th class="p_name">山田哲人</th>
+	<td>(前奏：「山田哲人！」「山田哲人！」　夢へと続く道　「山田！」)<br>
+		スタンド越えて打球は　遥かな夢へと続く　行け山田　新たな時代を</td>
 </tr>
 <tr>
 	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
-</tr>
-<tr>
-	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
+	<th class="p_name">エスコバー</th>
 	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
+		(ファンファーレ：ここまで飛ばせ (※) 　エスキー　ホームラン　ホームラン　エスキー　「エスキー！」)<br>
+		新たな風吹かし　栄光掴むんだ　みなぎる熱い闘志　さあ共に闘おう<br>
+		※ 外野にスワローズ応援席がない球場(マツダスタジアム等)<br>
+		ここまで飛ばせ → レフトへぶち込め
 	</td>
 </tr>
 <tr>
-	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
+	<th class="p_num">3</th>
+	<th class="p_name">西浦直亨</th>
+	<td>道を切り開くため　迷わず立ち向かう　光り輝く未来目指し　今踏み出せ<br>
 	</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">川端慎吾</th>
+	<td>バットに夢をのせ　放つその打球で　ツバメを勝利へ　導け慎吾<br>
+		【チャンス川端】<br>
+		(メロディー)　オーオオオー　(メロディー)　「慎吾！」<br>
+		(メロディー) 「慎吾！」　(メロディー) 「慎吾！」　(メロディー)<br>
+		(間奏：メロディーに合わせて「オイ！」の合いの手を入れる)
+	</td>
 </tr>
 <tr>
 	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_name">中山翔太</th>
+	<td>鋼の如く　強き覚悟　己の真髄を　極め続けろ</td>
 </tr>
 <tr>
 	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">塩見泰隆</th>
+	<td>宿す魂　その剣(つるぎ)に乗せ　風を切り裂き　鮮やかに駆ける</td>
 </tr>
 <tr>
 	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<th class="p_name">荒木貴裕</th>
+	<td>君の熱い思いと　スタンドの期待を乗せた　打球が描く軌道は　夢への懸け橋</td>
 </tr>
 <tr>
 	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_name">青木宣親</th>
+	<td>（ファンファーレ：ここで勝利を呼べ　行くぞ青木宣親　「青木！」)<br>
+		皆と共に　描いた未来を掴むため　愛すチームで　更なる伝説築け</td>
 </tr>
 <tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
+	<th class="p_num">30</th>
+	<th class="p_name">西田明央</th>
+	<td>君の力が　希望もたらす　勝利へ向かって　放て明央</td>
 </tr>
 <tr>
 	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
-</tr>
-<tr>
-	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
+	<th class="p_name">山崎晃大朗</th>
+	<td>光求め駆け抜ける　その誇り胸に　頂を目指し進めよ　山崎晃大朗</td>
 </tr>
 <tr>
 	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
-</tr>
-<tr>
-	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
+	<th class="p_name">廣岡大志</th>
+	<td>大空へと願い込めて　その翼広げ　蒼き丘に立つ勇姿よ　大志抱け</td>
 </tr>
 <tr>
 	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
+	<th class="p_name">坂口智隆</th>
+	<td>不屈の魂で　再び挑み　新たな歴史を刻め　魅せろ坂口</td>
 </tr>
 <tr>
-	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_num">45</th>
+	<th class="p_name">嶋基宏</th>
+	<td>新たな場所で　今甦れ　嶋が培ってきた　底力</td>
 </tr>
 <tr>
-	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_num">46</th>
+	<th class="p_name">太田賢吾</th>
+	<td>勝利を信じる声が　こだまするこの地で　今光る君の一打　快音を響かせて</td>
 </tr>
 <tr>
-	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_num">50</th>
+	<th class="p_name">上田剛史</th>
+	<td>期待背負い今　シャープに放てよ上田　風を切り走れ　歓喜の輪の中へ</td>
 </tr>
 <tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num">55</th>
+	<th class="p_name">村上宗隆</th>
+	<td>(前奏：闘志あふれる一打　今こそ放てよ「村上！村上！村上！村上！」)<br>
+		選ばれし猛者集う地で　強く咲く大輪　肥後より携えし力　今こそ解き放て
+		</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_num">63</th>
+	<th class="p_name">井野卓</th>
+	<td>磨き上げた技と　その熱いハートで　我らを導けいざ　勝利の道へと</td>
 </tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
-</tr>
+
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
+	<td>オイ！　オイ！　「○○(選手名)」　オイ！　オイ！　そーれ
+	</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
+	<td>頼むぞ○○(選手名)　ここでホームラン　今だ一発ぶちかませ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
+	<th class="p_name">捕手汎用テーマ</th>
+	<td>大きな希望と　期待を背に受け　大きく羽ばたけ　未来(あす)を描け</td>
+</tr>
+
+<tr>
+	<th class="p_num"></th>
+	<th class="p_name">外国人野手汎用テーマ</th>
+	<td>新たな風吹かし　栄光掴むんだ　みなぎる熱い闘志　さあ共に闘おう</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
+	<th class="p_name">投手汎用テーマ</th>
+	<td>闘志燃やして攻めろよ　投打に輝き放て　勝利をその手で　掴み取れ</td>
 </tr>
-<tr>
-	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
-</tr>
+
 </table>
 
 </section>
