--- a/pdfmr/static/templates2/tigers.html
+++ b/pdfmr/static/templates2/tigers.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>横浜DeNAベイスターズ</title>
+<title>阪神タイガース</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
@@ -50,178 +50,143 @@
 
 <section>
 
-<h2>横浜DeNAベイスターズ　応援歌
+<h2 class="tig">阪神タイガース　応援歌
 </h2>
 
 
 <table class="ta1">
 <tr>
-	<th class="p_num">0</th>
-	<th class="p_name">中井大介</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
+	<th class="p_num">00</th>
+	<th class="p_name">上本博紀</th>
+	<td>Oh! Oh! 博紀 上本博紀 猛虎の嵐よ今こそ 吹き荒れろ</td>
 </tr>
 <tr>
-	<th class="p_num">1</th>
-	<th class="p_name">桑原将志</th>
+	<th class="p_num">0</th>
+	<th class="p_name">木浪聖也</th>
 	<td>
-		今だクワ喰らいつけ　燃えろガッツマン　突っ走れどこまでも　勝利を呼ぶ男<br>
+		熱き心 乗せたスイング 行くぞ木浪 勝利目指せ<br>
 	</td>
 </tr>
 <tr>
 	<th class="p_num">2</th>
-	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
-		流れを我らに　アニモ　ロペス</td>
+	<th class="p_name">北條史也</th>
+	<td>この道の先には 虎の希望がある 今こそ進めよ 燃えろ北條</td>
 </tr>
 <tr>
 	<th class="p_num">3</th>
-	<th class="p_name">梶谷隆幸</th>
+	<th class="p_name">大山悠輔</th>
 	<td>
-		新たな歴史に　その名を刻め　梶谷隆幸　蒼い韋駄天[いだてん]
-	</td>
-</tr>
-<tr>
-	<th class="p_num">4</th>
-	<th class="p_name">伊藤裕季也</th>
-	<td>熱い想いを　ひと振りにかけろ
-		白球に夢をのせて　さあフルスイング<br>
+		悠然と振り構えたバットに 我らの夢を乗せて スタンドへはじき返せ 栄光つかむその日まで
 	</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
-	<th class="p_name">倉本寿彦</th>
-	<td>かっとばせ　見せろ男意気
-		さあ打つぞ　勝利へ導け</td>
+	<th class="p_name">近本光司</th>
+	<td>切り拓け 勝利への道 打てグラウンド駆けろ 燃えろ近本<br>
+	</td>
+</tr>
+<tr>
+	<th class="p_num">7</th>
+	<th class="p_name">糸井嘉男</th>
+	<td>【前奏：輝く栄冠 突き進めこの道】<br>
+		鋭いまなざし 猛虎の魂 力の限り 戦え糸井</td>
 </tr>
 <tr>
 	<th class="p_num">8</th>
-	<th class="p_name">神里和毅</th>
-	<td>琉球の波に乗って　潮風を背に受け
-		冴えわたる神業  オー島人[しまんちゅ]の星</td>
+	<th class="p_name">福留孝介</th>
+	<td>唸るスイング 切り裂くアーチ ほえろ孝介 勝負を決めろ</td>
 </tr>
 <tr>
 	<th class="p_num">9</th>
-	<th class="p_name">大和</th>
-	<td>敵はすぐ目の前だ　大いなる闘志燃やせ
-		響け和の魂　輝ける未来へ</td>
+	<th class="p_name">髙山俊</th>
+	<td>行くぞ白球乗せて 切り拓け 魅せろ高山熱き 猛虎魂/td>
 </tr>
 <tr>
-	<th class="p_num">10</th>
-	<th class="p_name">戸柱恭孝</th>
-	<td>奮い立て　横浜の大黒柱よ
-		さあ打て飛ばせ勝利への　扉を開け</td>
+	<th class="p_num">12</th>
+	<th class="p_name">坂本誠志郎</th>
+	<td>狙いを定め 強気で攻めろ お前の時代を築け さぁぶちかませ</td>
 </tr>
 <tr>
-	<th class="p_num">23</th>
-	<th class="p_name">オースティン</th>
-	<td>夢を運ぶひと振り　君が刻むヒストリー
-		​蒼く光る彗星　打てよタイラー　オースティン</td>
+	<th class="p_num">14</th>
+	<th class="p_name">能見篤史</th>
+	<td>鉄の左腕が 唸りを上げる 任せたぞ この勝負 今こそ決めろ</td>
 </tr>
 <tr>
-	<th class="p_num">29</th>
-	<th class="p_name">伊藤光</th>
-	<td>歓喜の瞬間を　その手で創るため
-		高鳴る胸に秘められた　覚悟を示す時</td>
+	<th class="p_num">25</th>
+	<th class="p_name">江越大賀</th>
+	<td>迫る速球に 魂で応えろ 打球をはるか彼方へ 飛ばせ江越</td>
 </tr>
 <tr>
 	<th class="p_num">31</th>
-	<th class="p_name">柴田竜拓</th>
-	<td>狙い澄ましたミートと　巧みなグラブ捌[さば]きは
-		努力というかけらの　結晶の証だ</td>
+	<th class="p_name">マルテ</th>
+	<td>力の限り 魅せろよマルテ 打てよ遥か遠く Let’s Go Let’s Go マルテ</td>
 </tr>
 <tr>
 	<th class="p_num">33</th>
-	<th class="p_name">乙坂智</th>
-	<td>Oh～　横浜の誇り　胸に抱いて
-		道を切り開けニコ</td>
+	<th class="p_name">糸原健斗</th>
+	<td>【A】誰にも劣らぬ ハートの強い男 我武者羅に走り抜け 果敢な戦士<br>
+		【B】凛々しく 泥臭く 斬り込め全力で 気力込めて 今ここで 燃えさかれ</td>
 </tr>
 <tr>
-	<th class="p_num">36</th>
-	<th class="p_name">髙城俊人</th>
-	<td>強肩強打のスゴイ奴
-		勝利呼び込むサイン　髙城俊人</td>
-</tr>
-<tr>
-	<th class="p_num">39</th>
-	<th class="p_name">嶺井博希</th>
-	<td>積み上げたものを今　プレーで示せ
-		横浜の守り神　嶺井博希</td>
-</tr>
-<tr>
-	<th class="p_num">42</th>
-	<th class="p_name">石川雄洋</th>
-	<td>栄冠掴むその日まで　恐れず飛び込めベースへ
-		君の熱き血潮で　燃えろ！雄洋！</td>
+	<th class="p_num">41</th>
+	<th class="p_name">ボーア</th>
+	<td>豪快なパワーで 魅せろ ジャスティン・ボーア 飛ばせ遥か遠く 勝利の為に</td>
 </tr>
 <tr>
 	<th class="p_num">44</th>
-	<th class="p_name">佐野恵太</th>
-	<td>蒼き戦士の闘志　果敢に突き進め
-		​ハマの空に弧を描け　進めShiny Road</td>
+	<th class="p_name">梅野隆太郎</th>
+	<td>気迫のスイング 燃えろよ梅野 どでかいアーチ 勝利への一撃</td>
 </tr>
 <tr>
 	<th class="p_num">51</th>
-	<th class="p_name">宮﨑敏郎</th>
-	<td>さあ振り抜け宮﨑　気迫あふれるパワーで
-		夢描け鮮やかに　空高く</td>
+	<th class="p_name">伊藤隼太</th>
+	<td>日々の努力を積み重ね 今迎えるこの舞台 歓喜呼び込むその姿 隼太の独壇場</td>
 </tr>
 <tr>
 	<th class="p_num">52</th>
-	<th class="p_name">細川成也</th>
-	<td>港に現る新星　若きスラッガー　セイヤ！(叫ぶ)
-		勝利の一撃たたきこめ　自分を信じて突き進め</td>
+	<th class="p_name">サンズ</th>
+	<td>打て飛ばせジェリー 力強い一打 レフトへライトへ ホームランジェリー</td>
 </tr>
 <tr>
-	<th class="p_num">99</th>
-	<th class="p_name">ソト</th>
-	<td>Going on ソト！ Touch'em all ソト！　君は嵐のカリビアン
-		見せつけてやれ　パワフルスイング</td>
+	<th class="p_num">55</th>
+	<th class="p_name">陽川尚将</th>
+	<td>スタンド目指し描く 放物線 逆風切り裂くパワー 行くぞ勝利へ</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
-		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+	<th class="p_num">60</th>
+	<th class="p_name">中谷将大</th>
+	<td>【前奏：ラーラララー…】<br>
+		天高く 打ち込め中谷 いざ大空に アーチ描け</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
-		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+	<th class="p_num">68</th>
+	<th class="p_name">俊介</th>
+	<td>俊足巧打の 走る稲妻 さあ行け俊介 今駆け抜けろ</td>
 </tr>
 <tr>
-	<th class="p_num"></th>
-	<th class="p_name">右打者汎用テーマ</th>
-	<td>ここで一発○○　ここで一発○○
-		ライトへレフトへ　ホームラン
-		それゆけそれゆけ　それゆけ○○</td>
+	<th class="p_num">94</th>
+	<th class="p_name">原口文仁</th>
+	<td>ここに立つ為に 鍛え抜いた日々よ 原口のすべて 魅せろ奮わせろ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">左打者汎用テーマ</th>
-	<td>出た出たついに　必殺バットマン
-		白い弾丸打ち込んで　ガッツポーズだ</td>
+	<th class="p_name">外国人選手二番</th>
+	<td>強く高くボール飛ばせ レッツゴー○○○ さあ行くぞ勝利へ 進め進め進め</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">投手のテーマ</th>
-	<td>闘うぞ　闘志みなぎらせて
-		勝利の海　行くぞベイスターズ</td>
+	<th class="p_name">捕手汎用</th>
+	<td>虎の扇の要 炎を巻き上げ 燃える一撃を 叩きこめ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">先発左腕のテーマ</th>
-	<td>左腕がうなれば　狙いは外さない
-		ピンポイントの技　攻めて攻めろ○○〈名前〉</td>
+	<th class="p_name">野手汎用</th>
+	<td>かっとばせ○○ かっとばせ○○ かっとばせ○○ ○○ ○○</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
+	<th class="p_name">投手汎用</th>
+	<td>かっとばせ○○ かっとばせ○○ かっとばせ○○ かっとばせ○○</td>
 </tr>
 </table>
 
